# real-time-comm

./: Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: comm.rs  main.rs
client/src/comm/: payload.rs
misc/: why.drawio
server/: Cargo.toml
server/src/: main.rs
