[package]
name = "client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#borsh = { version = "1.4", features = ["borsh-derive"] }
borsh = "1.4"
borsh-derive = "1.4.0"

eframe = "0.27"
egui = { version = "0.27", features = ["default"] }


tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
futures = "0.3"
futures-channel = "0.3"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
