[package]
name = "client"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.4"
borsh-derive = "1.4.0"

eframe = "0.27"
egui = { version = "0.27", features = ["default"] }


tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

tokio-tungstenite = "0.21"
