[package]
name = "server"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }

tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
